--- a/src/app/modules/home/home/home.component.html
+++ b/src/app/modules/home/home/home.component.html
@@ -1,5 +1,6 @@
 <div class="container">
   <app-home-card *ngFor="let card of homeCardsData"
+                 (click)="navigate(card.title)"
                  title="{{ card.title }}"
                  icon="{{ card?.icon ? card.icon : 'science' }}"></app-home-card>
 </div>
