--- a/src/app/modules/pokemon/pokemon/pokemon.component.html
+++ b/src/app/modules/pokemon/pokemon/pokemon.component.html
@@ -2,37 +2,11 @@
 
   <!-- <app-pokemon-detail [selectedPokemon]="pokemonDetail$ | async"
                         (addToTeam)="addPokemonToTeam($event)"></app-pokemon-detail> -->
-  <!-- <span class="component-header app-pokemon-detail">Pokemon Detail</span> -->
-  <section class="pokemon-detail">
-    <div *ngIf="selectedPokemon !== undefined"
-         class="wrapper">
-      <h2>#{{selectedPokemon?.id}} {{selectedPokemon?.name}}</h2>
-      <img src="{{selectedPokemon?.image}}"
-           alt="Front sprite of {{selectedPokemon?.name}}" />
-      <div class="pokemon-stats">
-        <div class="pokemon-stat">
-          <span>Height:</span>
-          <span class="pokemon-type">{{selectedPokemon?.height}}</span>
-        </div>
-        <div class="pokemon-stat">
-          <span>Type:</span>
-          <span class="pokemon-type">{{selectedPokemon?.type}}</span>
-        </div>
-        <div class="pokemon-stat">
-          <span>Weight:</span>
-          <span class="pokemon-type">{{selectedPokemon?.weight}}</span>
-        </div>
-      </div>
-      <div class="pokemon-actions">
-        <!-- <button (click)="addPokemonToTeam(selectedPokemon)">Add to Team</button> -->
-        <button>Add to Team</button>
-      </div>
-    </div>
-  </section>
+
+  <app-pokemon-detail [selectedPokemon]="selectedPokemon"></app-pokemon-detail>
 
   <!-- <app-pokemon-list [pokemonList]="pokemonList$ | async"
                     (emitSelectedPokemon)="requestPokemonDetail($event)"></app-pokemon-list> -->
-  <!-- <span class="component-header app-pokemon-list">Pokemon List</span> -->
   <div class="pokemon-list">
     <ul>
       <li *ngFor="let pokemon of pokemonList?.results">
@@ -51,8 +25,6 @@
 <div class="pokemon-team-wrapper">
   <!-- <app-pokemon-team [currentPokemonTeam]="currentPokemonTeam"
                       (removeFromTeam)="removePokemonFromTeam($event)"></app-pokemon-team> -->
-  <!-- <span class="component-header app-pokemon-team">Pokemon Team</span> -->
-  <!-- <span class="team-constraints">Select up to (6) Pokemon</span> -->
   <div class="pokemon-team">
     <!-- <app-pokemon-team-member *ngFor="let teamMember of currentPokemonTeam"
                                [pokemonTeamMember]="teamMember"
