--- a/src/app/modules/pokemon/pokemon-list/pokemon-list.component.html
+++ b/src/app/modules/pokemon/pokemon-list/pokemon-list.component.html
@@ -1,1 +1,13 @@
-<p>pokemon-list works!</p>
+<div class="pokemon-list">
+  <ul>
+    <li *ngFor="let pokemon of pokemonList?.results">
+      <!-- <button (click)="selectPokemon(pokemon)"
+              [ngClass]="{'highlight': pokemon?.name === selectedPokemon?.name}">
+        {{ pokemon.name }}
+      </button> -->
+      <button [ngClass]="{'highlight': pokemon?.name === selectedPokemon?.name}">
+        {{ pokemon.name }}
+      </button>
+    </li>
+  </ul>
+</div>
