--- a/src/app/modules/pokemon/pokemon/pokemon.component.html
+++ b/src/app/modules/pokemon/pokemon/pokemon.component.html
@@ -7,19 +7,7 @@
 
   <!-- <app-pokemon-list [pokemonList]="pokemonList$ | async"
                     (emitSelectedPokemon)="requestPokemonDetail($event)"></app-pokemon-list> -->
-  <div class="pokemon-list">
-    <ul>
-      <li *ngFor="let pokemon of pokemonList?.results">
-        <!-- <button (click)="selectPokemon(pokemon)"
-                [ngClass]="{'highlight': pokemon?.name === selectedPokemon?.name}">
-          {{ pokemon.name }}
-        </button> -->
-        <button [ngClass]="{'highlight': pokemon?.name === selectedPokemon?.name}">
-          {{ pokemon.name }}
-        </button>
-      </li>
-    </ul>
-  </div>
+  <app-pokemon-list [pokemonList]="pokemonList"></app-pokemon-list>
 </div>
 
 <div class="pokemon-team-wrapper">
