populated pkmn list

--- a/src/app/modules/pokemon/pokemon/pokemon.component.html
+++ b/src/app/modules/pokemon/pokemon/pokemon.component.html
@@ -7,7 +7,7 @@
 
   <!-- <app-pokemon-list [pokemonList]="pokemonList$ | async"
                     (emitSelectedPokemon)="requestPokemonDetail($event)"></app-pokemon-list> -->
-  <app-pokemon-list [pokemonList]="pokemonList"></app-pokemon-list>
+  <app-pokemon-list [pokemonList]="pokemonList$ | async"></app-pokemon-list>
 </div>
 
 <div class="pokemon-team-wrapper">
